[tool.poetry]
name = "credict-fraud"
version = "0.1.0"
description = "Pipeline de entrenamiento para deteccion de fraudes"
authors = ["Guillermo <guillermocabrera9710@hotmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
xgboost = "^2.1.3"
scikit-learn = "^1.6.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
